[tool.poetry]
name = "instagram-auto-following-python"
version = "0.1.0"
description = "This bot automates Instagram activity by following 50 users daily from specified hashtags. Actions are logged to a file (`follow_log.txt`) with timestamps."
authors = ["SigireddyBalasai <sigireddybalasai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
instagrapi = "^2.1.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
